# rupu

./: .gitignore  404.html  CANARY_NOTES.md  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  ISSUES.md  Makefile  README.md  TODO.md  index.html  styles.css
crates/rupu-agent/: Cargo.toml
crates/rupu-agent/src/: action.rs  coverage_tools.rs  lib.rs  loader.rs  mcp_tool.rs  permission.rs  runner.rs  spec.rs  tool_registry.rs
crates/rupu-agent/tests/: coverage_integration.rs  loader.rs  mcp_attach.rs  permission_resolution.rs  prompt_pty.rs  runner_aborts.rs  runner_basic.rs  runner_tools_in_request.rs  spec.rs  spec_auth_field.rs  tool_registry.rs
crates/rupu-app/: Cargo.toml
crates/rupu-app-canvas/: Cargo.toml
crates/rupu-app-canvas/src/: git_graph.rs  lib.rs  node_status.rs
crates/rupu-app-canvas/tests/: git_graph_snapshots.rs
crates/rupu-app/src/: lib.rs  main.rs  palette.rs  run_model.rs
crates/rupu-app/tests/: launcher_state.rs  run_model.rs  workspace_manifest_roundtrip.rs
crates/rupu-ast/: Cargo.toml
crates/rupu-ast/src/: lib.rs
crates/rupu-auth/: Cargo.toml
crates/rupu-auth/src/: backend.rs  in_memory.rs  json_file.rs  keychain_layout.rs  keyring.rs  lib.rs  probe.rs  resolver.rs  stored.rs
crates/rupu-auth/tests/: json_file.rs  keychain_resolver.rs  keyring_ignored.rs  oauth_callback.rs  oauth_device.rs  probe_cache.rs  resolver_default_pref.rs  resolver_refresh.rs
crates/rupu-cli/: Cargo.toml  build.rs
crates/rupu-cli/src/: build_info.rs  cp_agent_launcher.rs  cp_definition_generator.rs  cp_launcher.rs  cp_repos.rs  cp_session_mutator.rs  cp_session_sender.rs  cp_session_starter.rs  crash.rs  fleet_unit_dispatcher.rs  lib.rs  logging.rs  main.rs  paths.rs  pricing.rs  provider_factory.rs  resume.rs  run_target.rs  standalone_run_metadata.rs  templates.rs  update_notice.rs
crates/rupu-cli/tests/: auth_login_modes.rs  auth_status_table.rs  cli_agent.rs  cli_auth.rs  cli_autoflow.rs  cli_cleanup.rs  cli_config.rs  cli_generate.rs  cli_paths.rs  cli_provider_factory.rs  cli_repos.rs  cli_run.rs  cli_samples.rs  cli_session.rs  cli_transcript.rs  cli_ui.rs  cli_usage.rs  cli_watch.rs  cli_workflow.rs  coverage_audit_cli.rs  init_create_skeleton.rs  init_force.rs  init_git_flag.rs  init_gitignore.rs  init_manifest_in_sync.rs  init_merge_behavior.rs  init_smoke.rs  init_with_samples.rs  mcp_serve_stdio_smoke.rs  models_subcommand.rs  multi_provider_e2e.rs  no_stream_flag.rs  output_line_stream.rs  run_header.rs  run_target_parse.rs
crates/rupu-config/: Cargo.toml
crates/rupu-config/src/: autoflow_config.rs  config.rs  layer.rs  lib.rs  policy_config.rs  pricing.rs  pricing_config.rs  provider_config.rs  resolve.rs  scm_config.rs  storage_config.rs  triggers_config.rs  update_config.rs
crates/rupu-config/tests/: layering.rs  parse.rs  provider_config.rs  scm_config.rs
crates/rupu-coverage/: Cargo.toml
crates/rupu-coverage/src/: lib.rs  rerun.rs  tool_mappings.rs
crates/rupu-coverage/tests/: cwe_index_mode_end_to_end.rs  determinism.rs  end_to_end.rs
crates/rupu-cp/: Cargo.toml  build.rs
crates/rupu-cp/src/: agent_launcher.rs  config_write.rs  definition_generator.rs  embed.rs  error.rs  launcher.rs  lib.rs  net.rs  pagination.rs  repos.rs  server.rs  session_mutator.rs  session_sender.rs  session_starter.rs  sse.rs  state.rs  transcript_tail.rs  usage.rs
crates/rupu-cp/tests/: ast.rs  auth.rs  autoflows.rs  bucket_e2e.rs  coverage.rs  dashboard.rs  embed.rs  endpoints.rs  federation_e2e.rs  graph.rs  host_http.rs  host_launch_control.rs  host_local.rs  host_reads.rs  host_registry.rs  hosts_api.rs  node_tunnel.rs  projects.rs  run_graph.rs  run_observation.rs  run_streams.rs  runs.rs  server.rs  sessions_host.rs  sessions_live.rs  source.rs  sse.rs  transcript.rs  usage.rs  workers.rs
crates/rupu-cp/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
crates/rupu-keychain-acl/: Cargo.toml
crates/rupu-keychain-acl/src/: lib.rs
crates/rupu-mcp/: Cargo.toml
crates/rupu-mcp/src/: dispatcher.rs  error.rs  lib.rs  permission.rs  schema.rs  server.rs  transport.rs
crates/rupu-mcp/tests/: schema_snapshot.rs
crates/rupu-orchestrator/: Cargo.toml
crates/rupu-orchestrator/src/: action_protocol.rs  cron_schedule.rs  event_match.rs  event_vocab.rs  generate.rs  lib.rs  runner.rs  runs.rs  step_factory.rs  templates.rs  workflow.rs
crates/rupu-orchestrator/tests/: action_allowlist.rs  action_step.rs  branch_runner.rs  dispatch_agent.rs  dispatch_agents_parallel.rs  distributed_fanout_e2e.rs  executor_file_tail.rs  executor_in_process.rs  gate_node.rs  gate_sweep_smoke.rs  linear_runner.rs  pause_resume_e2e.rs  placed_step_e2e.rs  runner_events.rs  templates.rs  workflow_parse.rs  workspace_sync_e2e.rs
crates/rupu-providers/: Cargo.toml  LIFT_ORIGIN.md
crates/rupu-providers/src/: anthropic.rs  auth_mode.rs  broker_client.rs  broker_types.rs  classify.rs  concurrency.rs  credential_source.rs  credential_store.rs  error.rs  github_copilot.rs  google_gemini.rs  lib.rs  local.rs  model_catalog.rs  model_pool.rs  model_registry.rs  model_scorer.rs  model_tier.rs  openai_codex.rs  openai_compatible.rs  openai_wire.rs  provider.rs  provider_id.rs  registry.rs  router.rs  routing_history.rs  smart_router.rs  sse.rs  task_classifier.rs  types.rs
crates/rupu-providers/tests/: classify.rs  integration.rs  live_smoke.rs  openai_compatible_live.rs  registry_resolution.rs
crates/rupu-runtime/: Cargo.toml
crates/rupu-runtime/src/: artifacts.rs  autoflow_history.rs  backend.rs  lib.rs  provider_factory.rs  run_envelope.rs  wake.rs  worker.rs
crates/rupu-runtime/tests/: provider_resolution.rs
crates/rupu-scm/: Cargo.toml
crates/rupu-scm/src/: clone.rs  error.rs  event_connector.rs  lib.rs  platform.rs  registry.rs  types.rs  weburl.rs
crates/rupu-scm/tests/: classify_scm_error.rs  (+8 more)
crates/rupu-tools/: Cargo.toml
crates/rupu-transcript/: Cargo.toml
crates/rupu-tui/: Cargo.toml  README.md
crates/rupu-update/: Cargo.toml
crates/rupu-webhook/: Cargo.toml
crates/rupu-workspace/: Cargo.toml
(+1082 files in other folders)
