[workspace]
resolver = "2"
members = [
    "crates/rupu-transcript",
    "crates/rupu-config",
    "crates/rupu-workspace",
    "crates/rupu-auth",
    "crates/rupu-providers",
    "crates/rupu-scm",
    "crates/rupu-tools",
    "crates/rupu-tui",
    "crates/rupu-agent",
    "crates/rupu-orchestrator",
    "crates/rupu-mcp",
    "crates/rupu-webhook",
    "crates/rupu-keychain-acl",
    "crates/rupu-cli",
]

[workspace.package]
version = "0.4.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/section9labs/rupu"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["chrono"] }
jsonschema = "0.18"
toml = "0.8"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs / time
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# HTTP / streaming (lifted phi-providers)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "http2", "charset"], default-features = false }
async-trait = "0.1"
futures-util = "0.3"
fs2 = "0.4"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
gitlab = "0.1710"
octocrab = "0.42"
http = "1"

# Crypto (lifted)
ed25519-dalek = { version = "2", features = ["serde", "rand_core", "zeroize"] }
base64 = "0.22"
lru = "0.12"

# CLI / templating (used in Plan 2 but pinned now for cohesion)
clap = { version = "4", features = ["derive"] }
comfy-table = "7"

# TUI (Slice C)
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
insta = { version = "1", features = ["yaml"] }

minijinja = "2"
dirs = "5"
walkdir = "2"
which = "6"
whoami = "1"

# Auth
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }

# OAuth / PKCE
tiny_http = "0.12"
webbrowser = "1"
rand = "0.8"
sha2 = "0.10"
url = "2"

# Webhook receiver (axum chosen for async-native + tower middleware)
axum = "0.7"
hmac = "0.12"
hex = "0.4"
subtle = "2"

# Test deps
tempfile = "3"
assert_fs = "1"
assert_cmd = "2"
predicates = "3"
httpmock = "0.7"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
