[workspace]
resolver = "2"
members = [
    "crates/rupu-ast",
    "crates/rupu-app-canvas",
    "crates/rupu-app",
    "crates/rupu-coverage",
    "crates/rupu-transcript",
    "crates/rupu-runtime",
    "crates/rupu-config",
    "crates/rupu-workspace",
    "crates/rupu-auth",
    "crates/rupu-providers",
    "crates/rupu-scm",
    "crates/rupu-tools",
    "crates/rupu-agent",
    "crates/rupu-orchestrator",
    "crates/rupu-mcp",
    "crates/rupu-webhook",
    "crates/rupu-keychain-acl",
    "crates/rupu-cp",
    "crates/rupu-cli",
    "crates/rupu-update",
]

[workspace.package]
version = "0.57.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/section9labs/rupu"
authors = ["Section9Labs"]
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["chrono"] }
jsonschema = "0.18"
toml = "0.8"
toml_edit = "0.22"
csv = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs / time
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# HTTP / streaming (lifted phi-providers)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "http2", "charset"], default-features = false }
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
fs2 = "0.4"
git2 = { version = "0.19", default-features = false, features = ["https", "vendored-libgit2", "vendored-openssl"] }
gitlab = "0.1710"
octocrab = "0.42"
http = "1"

# Crypto (lifted)
ed25519-dalek = { version = "2", features = ["serde", "rand_core", "zeroize"] }
base64 = "0.22"
lru = "0.12"
glob = "0.3"

# CLI / templating (used in Plan 2 but pinned now for cohesion)
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
comfy-table = { version = "7", features = ["custom_styling"] }
indicatif = "0.17"
owo-colors = { version = "4", features = ["supports-colors"] }

# Syntax highlighting for `rupu agent show` / `rupu workflow show`.
# `default-fancy` swaps onig's C dep for fancy-regex (pure Rust).
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

crossterm = { version = "0.28", default-features = false, features = ["events"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
insta = { version = "1", features = ["yaml"] }

minijinja = { version = "2", features = ["json"] }
dirs = "5"
unicode-segmentation = "1.10"
walkdir = "2"
which = "6"
whoami = "1"

# Auth
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }

# OAuth / PKCE
tiny_http = "0.12"
webbrowser = "1"
rand = "0.8"
sha2 = "0.10"
semver = "1"
url = "2"

# Object storage (bucket dead-drop transport for multi-host Slice 2b)
object_store = { version = "0.14", features = ["aws", "gcp"] }

# Workspace sync (multi-host Slice 3c) — tar fallback + gitignore-aware walk
tar = "0.4"
ignore = "0.4"

# TLS crypto provider — the dependency tree enables BOTH rustls providers
# (aws-lc-rs via object_store/reqwest, ring via octocrab/jsonwebtoken), so
# rustls 0.23 cannot auto-select one. The CLI installs aws-lc-rs as the
# process-level default at startup (see crates/rupu-cli/src/main.rs).
rustls = "0.23"

# Webhook receiver / control-plane (axum chosen for async-native + tower middleware)
axum = "0.7"
tokio-tungstenite = "0.24"
tower-http = { version = "0.6", features = ["trace"] }
rust-embed = "8"
mime_guess = "2"
hmac = "0.12"
hex = "0.4"
subtle = "2"

# XML parsing (CWE catalog generator, feature-gated)
quick-xml = "0.36"

# AST / CST parsing (rupu-ast, SP4)
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-json = "0.24"

# Test deps
tempfile = "3"
assert_fs = "1"
assert_cmd = "2"
predicates = "3"
httpmock = "0.7"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# Native macOS app (Slice D)
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "1a2e50e3f222ae7d223acf718d2e8384a9b7fbe6" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", rev = "1a2e50e3f222ae7d223acf718d2e8384a9b7fbe6" }
directories = "5"
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
