[package]
name = "rupu-app-canvas"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
rupu-orchestrator = { path = "../rupu-orchestrator" }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
