[package]
name = "rupu-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "rupu_app"
path = "src/lib.rs"

[[bin]]
name = "rupu-app"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
dirs.workspace = true
futures-util.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
notify.workspace = true
rupu-app-canvas = { path = "../rupu-app-canvas" }
rupu-auth = { path = "../rupu-auth" }
rupu-config = { path = "../rupu-config" }
rupu-orchestrator = { path = "../rupu-orchestrator" }
rupu-scm = { path = "../rupu-scm" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = [
    "NSApplication",
    "NSButton",
    "NSControl",
    "NSOpenPanel",
    "NSPanel",
    "NSResponder",
    "NSSavePanel",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSView",
    "NSWindow",
] }
objc2-foundation.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true

# rupu-app calls into Apple's AppKit via objc2 raw bindings on macOS
# (NSStatusItem menubar stub). The FFI module opts in via
# #[allow(unsafe_code)]. All other crates remain "forbid".
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
