[package]
name = "rupu-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
keyring.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_fs.workspace = true
predicates.workspace = true
