[package]
name = "rupu-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
keyring.workspace = true
tiny_http.workspace = true
webbrowser.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
url.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
dirs.workspace = true
rupu-providers = { path = "../rupu-providers" }
rupu-keychain-acl = { path = "../rupu-keychain-acl" }

[dev-dependencies]
httpmock.workspace = true
tempfile.workspace = true
assert_fs.workspace = true
predicates.workspace = true
