[package]
name = "rupu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "rupu"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ulid.workspace = true
dirs.workspace = true

# In-workspace
rupu-agent = { path = "../rupu-agent" }
rupu-orchestrator = { path = "../rupu-orchestrator" }
rupu-config = { path = "../rupu-config" }
rupu-workspace = { path = "../rupu-workspace" }
rupu-auth = { path = "../rupu-auth" }
rupu-providers = { path = "../rupu-providers" }
rupu-tools = { path = "../rupu-tools" }
rupu-transcript = { path = "../rupu-transcript" }

[dev-dependencies]
tempfile.workspace = true
assert_fs.workspace = true
predicates.workspace = true
