[package]
name = "rupu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "rupu"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
ulid.workspace = true
dirs.workspace = true
csv.workspace = true
which.workspace = true
whoami.workspace = true
jsonschema.workspace = true
sha2.workspace = true
hex.workspace = true

# In-workspace
rupu-agent = { path = "../rupu-agent" }
rupu-orchestrator = { path = "../rupu-orchestrator" }
rupu-runtime = { path = "../rupu-runtime" }
rupu-config = { path = "../rupu-config" }
rupu-workspace = { path = "../rupu-workspace" }
rupu-auth = { path = "../rupu-auth" }
rupu-providers = { path = "../rupu-providers" }
rupu-scm = { path = "../rupu-scm" }
rupu-mcp = { path = "../rupu-mcp" }
rupu-tools = { path = "../rupu-tools" }
rupu-transcript = { path = "../rupu-transcript" }
rupu-webhook = { path = "../rupu-webhook" }
rupu-tui = { path = "../rupu-tui" }
comfy-table.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
crossterm.workspace = true
tempfile.workspace = true
syntect.workspace = true
minijinja.workspace = true
reqwest.workspace = true

[dev-dependencies]
assert_fs.workspace = true
assert_cmd = { workspace = true }
predicates.workspace = true
httpmock.workspace = true
