[package]
name = "rupu-coverage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
gen = ["dep:quick-xml"]

[[bin]]
name = "gen_cwe_catalog"
path = "src/bin/gen_cwe_catalog.rs"
required-features = ["gen"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "fs", "io-util"] }
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
ulid.workspace = true
glob.workspace = true
sha2.workspace = true
quick-xml = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
insta.workspace = true
