[package]
name = "rupu-cp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true
anyhow.workspace = true

# In-workspace
rupu-orchestrator = { path = "../rupu-orchestrator" }
rupu-config = { path = "../rupu-config" }

[dev-dependencies]
tempfile.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
