[package]
name = "rupu-cp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
subtle.workspace = true
anyhow.workspace = true
futures-util = { workspace = true }
notify = { workspace = true }
rust-embed.workspace = true
mime_guess.workspace = true

# In-workspace
rupu-orchestrator = { path = "../rupu-orchestrator" }
rupu-config = { path = "../rupu-config" }
rupu-agent = { path = "../rupu-agent" }
rupu-workspace = { path = "../rupu-workspace" }
rupu-runtime = { path = "../rupu-runtime" }
rupu-coverage = { path = "../rupu-coverage" }
rupu-transcript = { path = "../rupu-transcript" }

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
rupu-config = { path = "../rupu-config" }
rupu-transcript = { path = "../rupu-transcript" }
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
futures-util = { workspace = true }
serde_json.workspace = true
