[package]
name = "rupu-cp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
chrono.workspace = true
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
subtle.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
bytes.workspace = true
futures-util = { workspace = true }
tokio-stream = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
ulid.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true

# In-workspace
rupu-orchestrator = { path = "../rupu-orchestrator" }
rupu-config = { path = "../rupu-config" }
rupu-agent = { path = "../rupu-agent" }
rupu-workspace = { path = "../rupu-workspace" }
rupu-runtime = { path = "../rupu-runtime" }
rupu-coverage = { path = "../rupu-coverage" }
rupu-transcript = { path = "../rupu-transcript" }

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
rupu-config = { path = "../rupu-config" }
rupu-transcript = { path = "../rupu-transcript" }
httpmock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json.workspace = true
