[package]
name = "rupu-keychain-acl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# This crate intentionally does NOT inherit [workspace.lints]. It
# needs to call into Apple's Security.framework via raw FFI to
# pre-populate the keychain item's ACL with rupu's signing identity
# (so users skip the first-time "Always Allow" prompt). All other
# workspace crates remain `unsafe_code = "forbid"`.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
security-framework-sys = "2.17"
