[package]
name = "rupu-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
futures-util.workspace = true
chrono.workspace = true
fs2.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
httpmock.workspace = true
