[package]
name = "rupu-scm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
url.workspace = true
octocrab.workspace = true
http.workspace = true
git2.workspace = true
lru.workspace = true
rand.workspace = true

# In-workspace
rupu-auth = { path = "../rupu-auth" }
rupu-config = { path = "../rupu-config" }
rupu-providers = { path = "../rupu-providers" }

[dev-dependencies]
tempfile.workspace = true
httpmock.workspace = true
serde_json.workspace = true
