[package]
name = "rupu-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true }

# Tool implementations (crate-local; not in workspace deps)
which = "6"
globwalk = "0.9"

[dev-dependencies]
tempfile.workspace = true
assert_fs.workspace = true
predicates.workspace = true
