[package]
name = "rupu-transcript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
