[package]
name = "rupu-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rupu-transcript = { path = "../rupu-transcript" }
rupu-orchestrator = { path = "../rupu-orchestrator" }
ratatui.workspace = true
crossterm.workspace = true
notify.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
whoami.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile = "3"
