[package]
name = "rupu-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
ulid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_fs.workspace = true
predicates.workspace = true
